# FT42C-AssignmentWebSocketEchoServer

./: .gitignore  CMakeLists.txt  README.md
certs/: server.crt  server.key
include/: Logger.h  WebSocketServer.h  WebSocketSession.h  root_certificate.hpp
src/: Logger.cpp  WebSocketClient.cpp  WebSocketServer.cpp  WebSocketSession.cpp  main.cpp
